assets/_scss/pages/_product.scss
$thumbsize: 50px;

.product_body {
	margin-bottom: 35px;
	h1 {
	}
}
#product {
	.images {
		text-align: center;
		.featured {}
		.thumbs {
			clear: both;
			padding-top: 10px;
			.image {
				margin: 8px 6px 8px 0; 
				width: $thumbsize; 
				height: $thumbsize; 
				overflow: hidden;
				text-align:center; 
				display: inline-block; 
				vertical-align: top;
				&.last {
					margin: 8px 0 8px 0;
				}
			}
		}
	}
}
#product .select {
	margin-bottom: 0;
	.selector-wrapper {
		margin-right: 10px;
		float: left;
	}
}

#product .variants {
	label {
		display:inline-block;
		float: left; 
		vertical-align: middle;
		padding-top: 4px;
		margin-right: 10px;
	}
	input,
	select {
		display:inline-block;
		vertical-align: middle;
	}
	#quantity {
		width: 50px;
		border: $border;
		text-align: center;
		padding: 2px 4px;
	}
}
#product .purchase {
	margin: 25px 0;
	input[type=submit] {
		padding: 5px 15px;
		text-transform: uppercase;
		&:focus,
		&:hover {
		}
	}
}


#related {
	clear: both;
	width: 100%;
	padding: 0 0 35px;
	ul {
		list-style: none;	
		margin: 0;
		text-align: center;
		li {
			display: inline-block;
			width: 160px;
			margin: 0 40px 40px;
			text-align: center;
			img {
				display: block;
				margin: 0 auto 10px;
			}
			h3 {
				margin: 0;
				padding: 0;
			}
			.money {
			}
		}
	}
}
#cart-updated {
 	a {	
 	}
}

